--- a/src/styles.css
+++ b/src/styles.css
@@ -221,6 +221,16 @@ to {
 	opacity: 0.7;
   	font-size: 15px;
 }
+.subtext_button {
+	color: var(--color350);
+	margin-top: 15px;
+	margin-bottom: 10px;
+	font-size: 12px;
+}
+.subtext_button:hover {
+	cursor: pointer;
+	text-decoration: underline;
+}
 
 .list_bubble {
 	background: transparent;
